вторая итерация ТЗ 4