@@ -7,14 +7,15 @@ import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private final LinkedList<Task> history = new LinkedList<>();
+    private static final int sizeList = 10;
 
     // метод обновления списка истории
     public void add(Task task) {
         if (task == null) {
             return;
         }
-        if (history.size() > 9) {
-            history.remove(0);
+        if (history.size() > sizeList) {
+            history.removeFirst();
         }
         history.add(task);
     }
